# DeepResearch-with-Langgraph

./: .env.example  .gitignore  Makefile  README.md  hello.py  pyproject.toml  requirements.txt
resources/: sample_reflect.py  sample_reflexion.py
resources/samples/: sample_reflexion.py
src/chains/: ai_message_to_str.py  generate_search_queries.py  group_summerizer.py  research_controller.py  research_queries.py  summerize_page.py
src/crawlers/: crawl_page.py  crawl_serp.py
src/custom_tools/: research.py
src/errors/: main_errors.py
src/gen_ai/: summerize_page.py
src/graphs/: research_graph.py
src/models/: research_models.py
src/nodes/: research.py
src/parsers/: page_cleaner.py  serp_parser.py
src/prompts/: generate_search_queries_prompt.py  group_summerizer_prompt.py  page_summerizer_prompt.py  research_controller_prompt.py
tests/fixtures/: google_serp.html
tests/src/crawlers/: test_crawl_page.py
tests/src/parsers/: test_serp_parser.py
